src/test/deca/codegen/valid/Int/Plus.deca
// Description:
//     Test du PLUS

// Résultats:
//     2



{
    int res1 = 2147483646;

    println(res1+1);
}